move MAVEN_OPTS to setup-maven.sh